--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -93,7 +93,7 @@
         <span class="icon-search"></span>
       </div>
       <div class="main-content">
-        <h1>Fast<h1>
+        <h1>Fast</h1>
         <p class="lead">Fast as you want</p>
       </div>
     </section>
