Fixed site-header, ad, and btn-promote color.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -3,7 +3,7 @@ body {
   font-size: 13px;
   padding-top: 70px;
   margin-bottom: 14px;
-  background-color: #ccc;
+  background-color: #dfdfdf;
 }
 
 /** Class components **/
