--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -2,10 +2,10 @@
   width: 236px;
   margin: 14px 7px 0 7px;
   background-color: #fff;
-  border: 1px solid #ccc;
+  border: 1px solid #bbb;
   border-bottom: 0;
   border-radius: @border-radius-base;
-  box-shadow: 0 1px 1px #aaa;
+  box-shadow: 0 1px 1px #999;
 
   .ad-section {
     border-top: 1px solid @border-color;
@@ -46,6 +46,9 @@
       border-top: 0;
       border-radius: 0 0 @border-radius-base 0;
     }
+    .promote {
+      color: #b00;
+    }
     > .btn-group .btn-default {
       border-right: 0;
     }
@@ -84,7 +87,7 @@
     margin-bottom: 4px;
   }
   .user-realname-a {
-    color: #888;
+    color: #555;
   }
 }
 
