--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -1,7 +1,7 @@
 /** Header Layout **/
 #site-header {
   border-bottom: 1px solid @border-secondary;
-  .box-shadow(0 1px 1px #ccc);
+  .box-shadow(0 1px 1px #bbb);
 
   .btn-default {
     .box-shadow(0 0 1px #cacaca);
