--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -13,9 +13,34 @@
     </div>
 
     <div class="collapse navbar-collapse navbar-ex1-collapse">
+      <form id="search-form" action="{{ path('adstacy_app_search') }}" class="navbar-form navbar-left">
+        {% set isSearchUser = app.request.attributes.get('_route') == 'adstacy_app_search' and app.request.query.get('type') == 'users' %}
+        <div id="search-container" class="input-group">
+          <div class="input-group-btn">
+            <button id="search-type-btn" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+              <span id="search-type-text">{% if isSearchUser %}Users{% else %}Ads{% endif %}</span>
+              <i class="icon-angle-up icon-angle-down"></i>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a data-val="ads">Ads</a></li>
+              <li><a data-val="users">Users</a></li>
+            </ul>
+          </div>
+          <input id="search-box" type="text" class="form-control" placeholder="{{"search"|trans}}" name="q" value="{{ app.request.query.get('q') }}">
+          <div class="input-group-btn">
+            <button type="submit" class="btn btn-default">
+              <i class="icon-search"></i>
+            </button>
+          </div>
+        </div>
+        <input id="search-type" type="hidden" name="type" value="{% if isSearchUser %}users{% else %}ads{% endif %}">
+      </form>
+
       <div id="site-nav-dropdown" class="btn-group navbar-btn navbar-left">
         <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-          <i class="icon-angle-up icon-angle-down"></i>
+          <i class="icon-bar"></i>
+          <i class="icon-bar"></i>
+          <i class="icon-bar"></i>
         </button>
         <div id="site-nav-box" class="dropdown-menu">
           <nav>
@@ -41,29 +66,6 @@
           </ul>
         </div>
       </div>
-
-      <form id="search-form" action="{{ path('adstacy_app_search') }}" class="navbar-form navbar-left">
-        {% set isSearchUser = app.request.attributes.get('_route') == 'adstacy_app_search' and app.request.query.get('type') == 'users' %}
-        <div id="search-container" class="input-group">
-          <div class="input-group-btn">
-            <button id="search-type-btn" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-              <span id="search-type-text">{% if isSearchUser %}Users{% else %}Ads{% endif %}</span>
-              <i class="icon-angle-up icon-angle-down"></i>
-            </button>
-            <ul class="dropdown-menu">
-              <li><a data-val="ads">Ads</a></li>
-              <li><a data-val="users">Users</a></li>
-            </ul>
-          </div>
-          <input id="search-box" type="text" class="form-control" placeholder="{{"search"|trans}}" name="q" value="{{ app.request.query.get('q') }}">
-          <div class="input-group-btn">
-            <button type="submit" class="btn btn-default">
-              <i class="icon-search"></i>
-            </button>
-          </div>
-        </div>
-        <input id="search-type" type="hidden" name="type" value="{% if isSearchUser %}users{% else %}ads{% endif %}">
-      </form>
 
       <div class="nav navbar-nav navbar-right">
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
