--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -2,7 +2,7 @@
   width: 236px;
   margin: 14px 7px 0 7px;
   background-color: #fff;
-  border: 1px solid #bbb;
+  border: 1px solid #ccc;
   border-bottom: 0;
   border-radius: @border-radius-base;
   box-shadow: 0 1px 1px #999;
