--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -247,12 +247,17 @@
   }
 
   // Adjust Components
-  body {
-    padding-top: 0;
+  #search-form {
+    border: 0;
+    border-bottom: 1px solid #ddd;
   }
   #search-container,
   #search-box {
     width: 100% !important;
+  }
+  #search-container {
+    padding: 0 15px;
+    padding-bottom: 8px;
   }
   #register-link {
     display: block;
