--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -31,6 +31,10 @@
         <div class="meta-area">
           <div id="create-ad-desc">
             {{ form_row(form.description) }}
+            <p>
+              <span id="chars-left">{{ desc_length - (data.description|length) }}</span>
+              characters left
+            </p>
           </div>
 
           <a id="long-desc-trigger" href="#" class="btn btn-info btn-block">Click to add long description</a>
@@ -56,6 +60,8 @@
     $(function() {
       var $trigger = $('#long-desc-trigger');
       var $content = $('#create-ad-content');
+      var $charsLeft = $('#chars-left');
+      var $desc = $('#{{ form.description.vars.id }}');
       $trigger.click(function() {
         $content.toggleClass('hide');  
       });
@@ -66,6 +72,16 @@
         $btn.attr('disabled', 'disabled');
         $btn.html('<img src="/bundles/adstacyapp/img/spinner.gif" width="15" height="15"> Submitting...');
       });
+      var checkCharsLeft = function() {
+        var val = $desc.val();
+        if (val.length > {{ desc_length}} ) {
+          $desc.val(val.substring(0, {{ desc_length }} - 1));
+          return false;
+        }
+        $charsLeft.text({{ desc_length }} - val.length);
+      }
+      $desc.keyup(checkCharsLeft);
+      $desc.keypress(checkCharsLeft);
     });
   </script>
 {% endblock %}
