--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -11,6 +11,7 @@
     width: 100%;
 
     .image-upload {
+      display: none;
       width: 100%;
     }
 
@@ -31,6 +32,10 @@
   #create-ad-desc, #create-ad-content {
     margin: 10px 0;
   }
+}
+
+#long-desc-trigger {
+  margin-bottom: 10px;
 }
 
 @media screen and (max-width: @screen-tablet) {
