add typography and color on feature grid.

--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -54,7 +54,7 @@
         <span class="icon-ads"></span>
       </div>
       <div class="main-content">
-        <h1>Easy</h1>
+        <h1><b>E</b>asy</h1>
         <p class="lead">Just with a picture and short description, your ad is ready to go</p>
       </div>
     </section><section class="main-section">
@@ -62,7 +62,7 @@
         <span class="icon-bullhorn"></span>
       </div>
       <div class="main-content">
-        <h1>Social &amp; Fun</h1>
+        <h1><b>S</b>ocial &amp; <b>F</b>un</h1>
         <p class="lead">Promote any ads you like to share it to your followers</p>
       </div>
     </section><section class="main-section">
@@ -70,7 +70,7 @@
         <span class="icon-hash"></span>
       </div>
       <div class="main-content">
-        <h1>Search</h1>
+        <h1><b>S</b>earch</h1>
         <p class="lead">Find any products, events, jobs, vacancies and many more stuffs</p>
       </div>
     </section><section class="main-section">
@@ -78,7 +78,7 @@
         <span class="icon-search"></span>
       </div>
       <div class="main-content">
-        <h1>Hashtag</h1>
+        <h1><b>H</b>ashtag</h1>
         <p class="lead">Creatively describe your ad with hashtag to reach your potensial market</p>
       </div>
     </section><section class="main-section">
@@ -86,7 +86,7 @@
         <span class="icon-hash"></span>
       </div>
       <div class="main-content">
-        <h1>Free</h1>
+        <h1><b>F</b>ree</h1>
         <p class="lead">Pay Nothing to promote your ad with us</p>
       </div>
     </section><section class="main-section">
@@ -94,7 +94,7 @@
         <span class="icon-search"></span>
       </div>
       <div class="main-content">
-        <h1>Fast</h1>
+        <h1><b>F</b>ast</h1>
         <p class="lead">Fast as you want</p>
       </div>
     </section>
