--- a/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
@@ -27,29 +27,47 @@
   }
 
   h1 {
-    font-size: 30px;
+    font-size: 40px;
     color: @gray-dark;
     text-align: center;
+    font-weight: 300;
+
+    b {
+      color: @brand-primary;
+    }
   }
 
   .lead {
     font-size: 18px;
     color: #777;
+    text-align: center;
   }
 
   .main-pic {
     .img-responsive();
     background-color: @brand-primary;
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     margin: auto;
     text-align: center;
+    border: 5px solid #e5e5e5;
+    opacity: 0.7;
+   .transition(all .2s ease-in-out);
 
     span[class^="icon"] {
       font-size: 32px;
-      line-height: 80px;
+      line-height: 95px;
       color: #fff;
+     .transition(all .2s ease-in-out);
+    }
+
+    &:hover{
+      opacity: 1;
+
+      span[class^="icon"] {
+        font-size: 50px;
+      }
     }
   }
 }
@@ -118,6 +136,7 @@
       border-right-width: 0;
     }
   }
+
   #form-register-container {
     width: 100%;
     float: none;
