Add FileAPI to settings.

--- a/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
@@ -9,6 +9,15 @@
   {% endstylesheets %}
 {% endblock %}
 
+{% block head_scripts %}
+  {{ parent() }}
+  {% javascripts filter='uglifyjs2'
+    '@AdstacyAppBundle/Resources/public/js/FileAPI.min.js'
+  %}
+    <script src="{{ asset_url }}" type="text/javascript"></script>
+  {% endjavascripts %}
+{% endblock %}
+
 {% block content %}
 <div id="settings-container">
   <div class="panel panel-default">
