Change share and tweet button text.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -44,12 +44,12 @@
             {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
             {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
             <a href="{{ facebookUrl }}" class="facebook-share">
-              <i class="icon-facebook"></i> Facebook
+              <i class="icon-facebook"></i> Share
             </a>
           </li>
           <li>
             <a href="{{ twitterUrl }}" class="tweet">
-              <i class="icon-twitter twitter-share"></i> Twitter
+              <i class="icon-twitter twitter-share"></i> Tweet
             </a>
           </li>
         </ul>
