--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -51,10 +51,10 @@
           {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
 
           <a href="{{ twitterUrl }}" class="tweet btn btn-twitter btn-sm">
-            <i class="icon-twitter"></i> Twitter
+            <i class="icon-twitter"></i> Tweet
           </a>
           <a href="{{ facebookUrl }}" class="facebook-share btn btn-facebook btn-sm">
-            <i class="icon-facebook"></i> Facebook
+            <i class="icon-facebook"></i> Share
           </a>
           {% if app.user == user %}
             <div class="btn-group btn-group-sm pull-right">
