Fixed dropdown menu layout.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -39,3 +39,16 @@ body {
   background-color: #333;
   border-color: #333;
 }
+
+.dropdown-menu {
+  padding: 0;
+
+  li {
+    margin-bottom: 0;
+  }
+  li > a {
+    border-top: 1px solid #ddd;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
