Use translation on landing page.

--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -54,48 +54,48 @@
         <span class="icon-ads"></span>
       </div>
       <div class="main-content">
-        <h1><b>E</b>asy</h1>
-        <p class="lead">Just with a picture and short description, your ad is ready to go</p>
+        <h1>{{ "landing.features.easy.heading"|trans|raw }}</h1>
+        <p class="lead">{{ "landing.features.easy.desc"|trans|raw }}</p>
       </div>
     </section><section class="main-section">
       <div class="main-pic">
         <span class="icon-bullhorn"></span>
       </div>
       <div class="main-content">
-        <h1><b>S</b>ocial &amp; <b>F</b>un</h1>
-        <p class="lead">Promote any ads you like to share it to your followers</p>
-      </div>
-    </section><section class="main-section">
-      <div class="main-pic">
-        <span class="icon-hash"></span>
-      </div>
-      <div class="main-content">
-        <h1><b>S</b>earch</h1>
-        <p class="lead">Find any products, events, jobs, vacancies and many more stuffs</p>
+        <h1>{{ "landing.features.social.heading"|trans|raw }}</h1>
+        <p class="lead">{{ "landing.features.social.desc"|trans|raw }}</p>
       </div>
     </section><section class="main-section">
       <div class="main-pic">
         <span class="icon-search"></span>
       </div>
       <div class="main-content">
-        <h1><b>H</b>ashtag</h1>
-        <p class="lead">Creatively describe your ad with hashtag to reach your potensial market</p>
+        <h1>{{ "landing.features.search.heading"|trans|raw }}</h1>
+        <p class="lead">{{ "landing.features.search.desc"|trans|raw }}</p>
       </div>
     </section><section class="main-section">
       <div class="main-pic">
         <span class="icon-hash"></span>
       </div>
       <div class="main-content">
-        <h1><b>F</b>ree</h1>
-        <p class="lead">Pay Nothing to promote your ad with us</p>
+        <h1>{{ "landing.features.hashtag.heading"|trans|raw }}</h1>
+        <p class="lead">{{ "landing.features.hashtag.desc"|trans|raw }}</p>
+      </div>
+    </section><section class="main-section">
+      <div class="main-pic">
+        <span class="icon-hash"></span>
+      </div>
+      <div class="main-content">
+        <h1>{{ "landing.features.free.heading"|trans|raw }}</h1>
+        <p class="lead">{{ "landing.features.free.desc"|trans|raw }}</p>
       </div>
     </section><section class="main-section">
       <div class="main-pic">
         <span class="icon-search"></span>
       </div>
       <div class="main-content">
-        <h1><b>F</b>ast</h1>
-        <p class="lead">Fast as you want</p>
+        <h1>{{ "landing.features.fast.heading"|trans|raw }}</h1>
+        <p class="lead">{{ "landing.features.fast.desc"|trans|raw }}</p>
       </div>
     </section>
     <!-- end inline-block -->
