--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -78,6 +78,7 @@
     margin-bottom: 10px;
   }
   a {
+    border-top: 0;
     color: @text-primary;
     display: inline-block;
     padding: 2px 10px;
