--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -43,10 +43,10 @@ body {
 .dropdown-menu {
   padding: 0;
 
-  li {
+  & > li {
     margin-bottom: 0;
   }
-  li > a {
+  & > li > a {
     border-top: 1px solid #ddd;
     padding-top: 10px;
     padding-bottom: 10px;
