Fix chars left css.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -34,8 +34,12 @@
   }
 }
 
-#long-desc-trigger {
+#long-desc-trigger, #chars-left-box {
   margin-bottom: 10px;
+}
+
+#chars-left-box {
+  color: #aaa;
 }
 
 @media screen and (max-width: @screen-tablet) {
