--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -28,7 +28,7 @@
       <div id="form-register-container" class="panel panel-default">
         <div class="panel-heading">
           {% for owner in hwi_oauth_resource_owners() %}
-            <a class="btn btn-block btn-{{ owner }}" href="{{ hwi_oauth_login_url(owner) }}">Signup with {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
+          <a class="btn btn-block btn-{{ owner }}" href="{{ hwi_oauth_login_url(owner) }}">{{"register.with"|trans}} {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
           {% endfor %}
         </div>
         <form action="{{ path('fos_user_registration_register') }}" class="panel-body" method="post" role="form">
