--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -18,7 +18,7 @@
     .image-preview {
       width: 100%;
       display: block;
-      margin: 0 auto;
+      margin: 10px auto;
       text-align: center;
       img {
         max-width: 800px;
