--- a/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
@@ -75,7 +75,7 @@
 #form-register-container {
   width: 300px;
   float: right;
-  margin-top: 100px;
+  margin-top: 80px;
 }
 
 .red {
@@ -107,9 +107,9 @@
 
   h1 {
     color: #fff;
-    margin: 20px 0;
+    margin: 0;
     font-weight: bold;
-    font-size: 80px;
+    font-size: 64px;
     text-shadow: 0 5px 10px #000;
   }
 
