--- a/app/Resources/FMElfinderBundle/views/Elfinder/ckeditor.html.twig
+++ b/app/Resources/FMElfinderBundle/views/Elfinder/ckeditor.html.twig
@@ -8,7 +8,7 @@
   {% endstylesheets %}
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
-  {% javascripts output='bundles/fmelfinder/js/main.js' filter='uglifyjs'
+  {% javascripts output='bundles/fmelfinder/js/main.js' filter='uglifyjs2'
     '@FMElfinderBundle/Resources/public/js/elfinder.min.js'
   %}
     <script src="{{ asset_url }}"></script>
