Set body padding for responsiveness.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -243,6 +243,9 @@
   }
 
   // Adjust Components
+  body {
+    padding-top: 40px;
+  }
   #search-form {
     border: 0;
     border-bottom: 1px solid #ddd;
