Fixed Responsive image preview on settings page.

--- a/src/Adstacy/AppBundle/Resources/public/less/module/image-preview.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/module/image-preview.less
@@ -1,3 +1,5 @@
+@import '../variables.less';
+
 .image-preview {
   &.small img {
     max-height: 200px;
@@ -6,4 +8,13 @@
 
 .image-upload-trigger {
   cursor: pointer;
+}
+
+@media screen and (max-width: @screen-phone) {
+  .image-preview {
+    width: 100%;
+    img {
+      max-width: 100%;
+    }
+  }
 }
