Add landing page screenshot.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
@@ -9,6 +9,11 @@
   margin: 20px auto;
 }
 
+#landing-screenshot {
+  float: left;
+  margin-top: 40px;
+}
+
 .main-section {
   width: 333px;
   display: inline-block;
@@ -75,7 +80,7 @@
 #form-register-container {
   width: 300px;
   float: right;
-  margin-top: 80px;
+  margin-top: 60px;
 }
 
 .red {
@@ -104,6 +109,7 @@
 #main-title {
   background: #333 url('../img/screenshot.jpg') no-repeat center;
   background-size: cover;
+  padding-bottom: 20px;
 
   h1 {
     color: #fff;
