--- a/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
@@ -1,3 +1,8 @@
+body {
+  padding-top: 50px;
+  margin-bottom: 0;
+  background-color: #fff;
+}
 .main-container {
   width: 1000px;
   margin: 0 auto;
@@ -5,7 +10,6 @@
 
 #main-feature {
   background-color: #fff;
-  border-bottom: 1px solid @border-color;
   margin: 20px auto;
 }
 
@@ -16,20 +20,9 @@
 
 .main-section {
   width: 333px;
-  display: inline-block;
-  vertical-align: top;
+  float: left;
   padding: 20px;
   color: @gray-dark;
-  border: solid @border-color;
-  border-width: 1px 0 0 1px;
-
-  &:nth-child(3n) {
-    border-right-width: 1px;
-  }
-
-  &:nth-child(3n+2) {
-    width: 334px;
-  }
 
   h1 {
     font-size: 40px;
@@ -60,7 +53,7 @@
     opacity: 0.7;
    .transition(all .2s ease-in-out);
 
-    span[class^="icon"] {
+    i[class^="icon"] {
       font-size: 32px;
       line-height: 95px;
       color: #fff;
@@ -70,11 +63,16 @@
     &:hover{
       opacity: 1;
 
-      span[class^="icon"] {
+      i[class^="icon"] {
         font-size: 50px;
       }
     }
   }
+}
+
+.main-section.last {
+  border-right-width: 1px;
+  width: 334px;
 }
 
 #form-register-container {
