Fix bug in landing.less

--- a/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
@@ -153,3 +153,9 @@ body {
     float: none;
   }
 }
+
+@media screen and (min-width: @screen-md-max) {
+  #main-title {
+    background: #333 url('../img/screenshot.jpg') no-repeat center;
+  }
+}
